# head-pose-estimation

./: CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  main.cpp
inc/: FaceDetector.h  PoseEstimator.h
src/: FaceDetection.cpp  FaceDetector.cpp  PoseEstimator.cpp
